[metadata]
name = FiberFusing
description = A package fiber fusing simulation.
version = file: FiberFusing/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx, windows
url = https://github.com/MartinPdeS/FiberFusing
license = MIT
license_file = LICENSE
readme = README.rst
classifiers =
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: Implementation :: CPython
        Development Status :: 3 - Alpha
        Topic :: Scientific/Engineering :: Physics


[options]
packages=find:

include_package_data = true
python_requires >= 3.10

setup_requires =
	setuptools
	numpy
        wheel

install_requires =
        MPSPlots
        shapely >= 2.0.0
        matplotlib
        numpy


[sdist]
formats = zip, gztar


[options.extras_require]
development =
        pytest>=0.6
        pytest-cov>=2.0
        pytest-json-report
        flake8>=3.9
        coverage
        Jinja2==3.1.2
        numpydoc==1.5.0
        Sphinx==5.1.1
        sphinx-gallery==0.11.1
        sphinx-rtd-theme==1.0.0
        flake8>=3.9

testing =
        pytest>=0.6
        pytest-cov>=2.0
        pytest-json-report
        flake8>=3.9
        coverage

documentation =
        Jinja2==3.1.2
        numpydoc==1.5.0
        Sphinx==5.1.1
        sphinx-gallery==0.11.1
        sphinx-rtd-theme==1.0.0
        flake8>=3.9
