[metadata]
name = FiberFusing
description = A package fiber fusing simulation.
version = file: FiberFusing/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx, windows
url = https://github.com/MartinPdeS/FiberFusing
license = MIT
license_file = LICENSE
readme = README.rst
Documentation = https://fiberfusing.readthedocs.io/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Telecommunications Industry
    Intended Audience :: Science/Research

[options]
packages=find:
include_package_data = true
python_requires >= 3.10
install_requires = file: requirements/requirements.txt
setup_requires =
	setuptools
    wheel

[options.packages.find]
exclude =
    extern
    docs
    tests

[options.extras_require]
development = file: requirements/requirements-development.txt
documentation = file: requirements/requirements-documentation.txt
testing = file: requirements/requirements-testing.txt

[flake8]
max-line-length = 200
per-file-ignores = __init__.py:F401
ignore = W605

[tool:pytest]
minversion = 6.0
addopts = -ra -q -v
testpaths = tests

[coverage:run]
source = FiberFusing
omit =
    FiberFusing/tools/directories.py
    FiberFusing/tools/plot_style.py

[sdist]
formats = zip, gztar