[metadata]
name = FiberFusing
description = A package fiber fusing simulation.
version = file: FiberFusing/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx, windows
url = https://github.com/MartinPdeS/FiberFusing
license = MIT
license_file = LICENSE
readme = README.rst
Documentation = https://fiberfusing.readthedocs.io/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Telecommunications Industry
    Intended Audience :: Science/Research

[options]
packages=find:
include_package_data = true
python_requires >= 3.8

setup_requires =
    setuptools>=69.0.0

install_requires =
    pydantic==2.6.3
    MPSTools==1.4.2
    scipy==1.11.3
    numpy>=1.26.0
    matplotlib==3.8.2
    shapely >= 2.0.0
    MPSPlots==1.4.0

[options.extras_require]
documentation =
    numpydoc==1.6.0
    sphinx>=5.1.1
    sphinx-gallery==0.15.0
    sphinx-rtd-theme==2.0.0
    pydata-sphinx-theme==0.14.1

testing =
    pytest>=0.6
    pytest-cov>=2.0
    pytest-json-report==1.5.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    coverage==6.5.0

[flake8]
max-line-length = 200
per-file-ignores = __init__.py:F401
ignore = W605


[coverage:run]
source = FiberFusing
omit =
    FiberFusing/tools/directories.py
    FiberFusing/tools/plot_style.py

[options.packages.find]
exclude =
    extern
    docs
    tests

[sdist]
formats = zip, gztar